# postman-collection-cli

./: Cargo.toml  README.md  TestCollection.postman_collection.json  flake.nix
src/: get_curl.rs  main.rs  shell_completion.rs  utils.rs
src/args/: curl.rs  direct.rs  mod.rs  old_curl.rs  process.rs
src/types/: curl.rs  mod.rs  postman.rs  postman_to_curl.rs  postman_to_reqwest.rs
