[package]
name = "pocc"
version = "0.1.0"
edition = "2021"
authors = [ "Ritick Madaan <ritickmadaan57@gmail.com>" ]
description = "A CLI to play with postman collections(v2.1.0) inspired by [password-store](https://www.passwordstore.org/)"

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.0", features = ["derive"] }
regex = "1.9.1"
serde = "1.0.163"
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
