[package]
name = "pocc"
version = "1.1.1"
authors = [ "Ritick Madaan <ritickmadaan57@gmail.com>" ]
license = "CC0-1.0"
edition = "2021"
description = "A CLI to play with postman collections(v2.1.0) inspired by [password-store](https://www.passwordstore.org/)"
homepage = "https://github.com/RitickMadaan/postman-collection-cli"
repository = "https://github.com/RitickMadaan/postman-collection-cli"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "postman", "collection", "curl", "passwordstore"]
exclude = [
    "*.nix",
    ".envrc",
    "TestCollection*"
]

[dependencies]
base64 = "0.21.2"
clap = { version = "4.3.0", features = ["derive"] }
inquire = "0.6.2"
regex = "1.9.1"
serde = "1.0.163"
serde_json = "1.0.96"
url = { version = "2.3.1", features = ["serde"] }
arboard = "3.2.1"
